Get safety branch from mercurial

--- a/doc/header.html.in
+++ b/doc/header.html.in
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>$title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Ioan A. Șucan, Mark Moll, Lydia E. Kavraki">
+  <meta name="author" content="Ioan A. È˜ucan, Mark Moll, Lydia E. Kavraki">
 
   <link href="css/tabs.css" rel="stylesheet">
   <link href="css/doxygen.css" rel="stylesheet">
